--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ requires-python = ">=3.11"
 dependencies = [
     "jupyter>=1.1.1",
     "matplotlib>=3.9.3",
+    "networkx>=3.4.2",
     "numpy>=2.1.3",
     "parse>=1.20.2",
+    "pyqt5>=5.15.11",
 ]
