--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ dependencies = [
     "matplotlib>=3.9.3",
     "networkx>=3.4.2",
     "numpy>=2.1.3",
+    "pandas>=2.2.3",
     "parse>=1.20.2",
     "pyqt5>=5.15.11",
+    "requests>=2.32.3",
     "scipy>=1.14.1",
 ]
